--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,12 +1,12 @@
 cmake_minimum_required(VERSION 3.15)
 
-project (mlp-native)
+project (mlp-native-addon)
 
 add_definitions(-DNAPI_VERSION=4)
 
 include_directories(${CMAKE_JS_INC})
 
-file(GLOB SOURCE_FILES "cppsrc/*.cpp" "cppsrc/*.h" "cppsrc/**/*.cpp" "cppsrc/**/*.h")
+file(GLOB SOURCE_FILES "src/*.cpp" "src/*.h" "src/**/*.cpp" "src/**/*.h")
 
 add_library(${PROJECT_NAME} SHARED ${SOURCE_FILES} ${CMAKE_JS_SRC})
 set_target_properties(${PROJECT_NAME} PROPERTIES PREFIX "" SUFFIX ".node")
