--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mlp-addon",
+  "name": "mlp-native-addon",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -13,6 +13,7 @@
     "cmake-js": "^7.2.1"
   },
   "dependencies": {
+    "bindings": "^1.5.0",
     "node-addon-api": "^6.1.0"
   },
   "cmake-js": {
